Fix alignment of gametype labels in styles.scss to center

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -182,7 +182,7 @@
         font-weight: bold;
         font-size: 12px;
         margin-bottom: 2px;
-        align-items: end;
+        align-items: center;
 
         &.gametype-voc {
           color: var(--rg-gametype-voc) !important;
